ImpexAST/src/test/resources/errors/macro/macro-no-equals.impex
$macro_def forgotten equals